--- a/Course5-ReproduceResearch/C5W2A1/C5W3PA1.Rmd
+++ b/Course5-ReproduceResearch/C5W2A1/C5W3PA1.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "C5W2A1 - Reproducible Research: Peer Assessment 1"
+title: 'C5W2A1 - Reproducible Research: Peer Assessment 1'
 author: "Hieu Quoc Nguyen"
 date: "9/8/2020"
 output:
-    html_document:
-        keep_md: true
+  pdf_document: default
+  html_document:
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -25,13 +26,10 @@ This assignment makes use of data from a personal activity monitoring device. Th
 library(data.table)
 library(ggplot2)
 
-unzip("repdata.data.activity.zip")
-
 # READING CSV
-act.dt = data.table::fread(input = "activity.csv")
+act.dt = data.table::fread(input = "repdata_data_activity/activity.csv")
 print(str(act.dt))
 ```
-
 
 ## Histogram of the total number of steps taken each day
 
